--- a/app/views/registration_mailer/welcome_email.html.erb
+++ b/app/views/registration_mailer/welcome_email.html.erb
@@ -70,7 +70,7 @@
                     <!--————————————————————————————-->
                     <!--~~\\ Notify-title module end //~~-->
 
-                    <div class="container wide" width="600" style="margin: 0 auto; text-align: left; width: 600px;">
+                    <div class="container wide" width="600" style="margin: 0 auto; text-align: <%= @direction[:align] %>; width: 600px;">
 
                       <table cellpadding="0" cellspacing="0" border="0" width="100%" style="border-collapse: collapse; mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
                         <tr>
@@ -87,7 +87,8 @@
                                     %>
                                   </span>
                                 </td>
-                                <td style="border-collapse: collapse;" align="right"><img src="https://images.ctfassets.net/g118h5yoccvd/1ji47bOy90143djFnEPuj1/936ebe3388362a7861715a1b819b231b/arrow_3x.png" alt="arrow-icon" width="7" style="-ms-interpolation-mode: bicubic; border: 0 none; height: auto; line-height: 100%; outline: none; text-decoration: none;">
+                                <td style="border-collapse: collapse;" align="right">
+                                  <%= image_tag("https://images.ctfassets.net/g118h5yoccvd/#{@direction[:arrow]}", width: "7", alt: "arrow-icon",  style: "-ms-interpolation-mode: bicubic; border: 0 none; height: auto; line-height: 100%; outline: none; text-decoration: none;") %>
                                 </td>
                               </tr>
                             </table>
