--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -170,7 +170,7 @@
                 <div class="container " width="600" style="margin: 0 auto; text-align: left; width: 600px;">
                   <table class="container__table" cellpadding="0" cellspacing="0" border="0" width="100%" style="border-collapse: collapse; margin: 0 auto; mso-table-lspace: 0pt; mso-table-rspace: 0pt; table-layout: fixed;">
                     <tr>
-                      <th class="col-1 header__content" style="font-weight: normal; mso-line-height-rule: exactly; padding: 0;" width="600px" valign="top" align="left">
+                      <th class="col-1 header__content" style="font-weight: normal; mso-line-height-rule: exactly; padding: 0;" width="600px" valign="top" align="<%= @direction[:align] %>">
                         <table cellpadding="0" cellspacing="0" border="0" width="auto" style="border-collapse: collapse; mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
                           <tr>
                             <td class="header__logo" width="70%" hstyle="border-collapse: collapse; line-height: 0; padding: 0 !important;"><img src="https://images.ctfassets.net/g118h5yoccvd/1An4hBbtROLoCZqgfwLbxC/3babfcd84279f5633fe2e7f58996c30f/Check_white.png" alt="Check" width="110" height="28" style="-ms-interpolation-mode: bicubic; border: 0 none; height: auto !important; line-height: 100%; outline: none; text-decoration: none;">
