--- a/app/views/task_mailer/notify.html.erb
+++ b/app/views/task_mailer/notify.html.erb
@@ -25,17 +25,17 @@
 
           <!--~~// Notify-title module start \\~~-->
           <!--————————————————————————————-->
-          <div class="notify-title" style="text-align: left !important;">
+          <div class="notify-title" style="text-align: <%= @direction[:align] %> !important; direction: <%= @direction[:dir] %>">
             <table cellpadding="0" cellspacing="0" border="0" width="100%" style="border-collapse: collapse; mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
               <tr>
                 <td style="border-collapse: collapse; font-size: 44px; line-height: 1; text-decoration: none !important;">&nbsp;</td>
               </tr>
             </table>
-            <div class="container " width="600" style="margin: 0 auto; text-align: left; width: 600px;">
+            <div class="container " width="600" style="margin: 0 auto; text-align: <%= @direction[:align] %>; width: 600px;">
               <table class="container__table" cellpadding="0" cellspacing="0" border="0" width="100%" style="border-collapse: collapse; margin: 0 auto; mso-table-lspace: 0pt; mso-table-rspace: 0pt; table-layout: fixed;">
                 <tr>
-                  <th class="col-1" style="font-weight: normal; mso-line-height-rule: exactly; padding: 0;" width="600px" valign="top" align="left">
-                    <div class="notify-title__content">
+                  <th class="col-1" style="font-weight: normal; mso-line-height-rule: exactly; padding: 0;" width="600px" valign="top" align="<%= @direction[:align] %>">
+                    <div class="notify-title__content" style="text-align:<%= @direction[:align] %>;">
                       <div class="h3 notify-title__proj" style="font-size: 21px; letter-spacing: -0.2px; line-height: 29px;">
                         <%= @info[:greeting] %>
                       </div>
@@ -99,15 +99,15 @@
 
                     <!--~~// Section module start \\~~-->
                     <!--————————————————————————————-->
-                    <div class="container wide" width="600" style="margin: 0 auto; text-align: left; width: 600px;">
+                    <div class="container wide" width="600" style="margin: 0 auto; text-align: <%= @direction[:align] %>; width: 600px;">
                       <table class="container__table" cellpadding="0" cellspacing="0" border="0" width="100%" style="border-collapse: collapse; margin: 0 auto; mso-table-lspace: 0pt; mso-table-rspace: 0pt; table-layout: fixed;">
                         <tr>
-                           <td class="section__title" style="padding: 5px 0px;" align="left">
+                           <td class="section__title" style="padding: 5px 0px;" align="<%= @direction[:align] %>">
                             <%= link_to(@info[:title], @info[:media_url], :class => 'h3 link', :style => "font-size: 21px; letter-spacing: -0.2px; line-height: 29px; font-weight: bold !important; color: #0d6cf7 !important; text-decoration: none;") %>
                          </td>
                         </tr>
                         <tr style="text-align:left;vertical-align:baseline">
-                          <td class="section__title" style="padding: 23px 0px 14px 0px;" align="left">
+                          <td class="section__title" style="padding: 23px 0px 14px 0px;" align="<%= @direction[:align] %>">
                             <div class="text-gray" style="color: #757575 !important;">
                               <%= image_tag(@info[:profile_image], height: "20", width: "20", style: "font-size:14px; height:20px; width:20px; line-height:20px; border-radius:4px; vertical-align:top") %>
                               &nbsp;
@@ -118,7 +118,7 @@
                           </td>
                         </tr>
                         <tr>
-                          <td class="section__title" style="padding: 23px 30px;" bgcolor="#fff" align="left">
+                          <td class="section__title" style="padding: 23px 30px;" bgcolor="#fff" align="<%= @direction[:align] %>">
                             <%= @info[:response] %>
                           </td>
                         </tr>
@@ -141,7 +141,8 @@
                                     <%= link_to(@info[:button], @info[:media_url], :class => 'link', :style => "color: #fff !important; text-decoration: none;") %>
                                   </span>
                                 </td>
-                                <td style="border-collapse: collapse;" align="right"><img src="https://images.ctfassets.net/g118h5yoccvd/1ji47bOy90143djFnEPuj1/936ebe3388362a7861715a1b819b231b/arrow_3x.png" alt="arrow-icon" width="7" style="-ms-interpolation-mode: bicubic; border: 0 none; height: auto; line-height: 100%; outline: none; text-decoration: none;">
+                                <td style="border-collapse: collapse;" align="right">
+                                  <%= image_tag("https://images.ctfassets.net/g118h5yoccvd/#{@direction[:arrow]}", width: "7", alt: "arrow-icon",  style: "-ms-interpolation-mode: bicubic; border: 0 none; height: auto; line-height: 100%; outline: none; text-decoration: none;") %>
                                 </td>
                               </tr>
                             </table>
@@ -157,16 +158,16 @@
 
                     </div>
 
-                    <div class="container wide" width="600" style="margin: 0 auto; text-align: left; width: 600px;">
+                    <div class="container wide" width="600" style="margin: 0 auto; text-align: <%= @direction[:align] %>; width: 600px;">
                       <table class="container__table" cellpadding="0" cellspacing="0" border="0" width="100%" style="border-collapse: collapse; margin: 0 auto; mso-table-lspace: 0pt; mso-table-rspace: 0pt; table-layout: fixed;">
                         <tr>
-                          <th class="col-1" style="font-weight: normal; mso-line-height-rule: exactly; padding: 0;" width="600px" valign="top" align="left">
+                          <th class="col-1" style="font-weight: normal; mso-line-height-rule: exactly; padding: 0;" width="600px" valign="top" align="<%= @direction[:align] %>">
                             <div class="section" style="background-color: #fff; text-align: !important;">
                               <!-- Section title-->
                               <% if !@info[:description].blank? %>
                                 <table cellpadding="0" cellspacing="0" border="0" width="100%" style="border-collapse: collapse; mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
                                   <tr>
-                                    <td class="section__title" style="padding: 23px 30px;" bgcolor="#fff" align="left">
+                                    <td class="section__title" style="padding: 23px 30px;" bgcolor="#fff" align="<%= @direction[:align] %>">
                                       <span class="span text" style="font-size: 17px; line-height: 20px;">
                                         <%= @info[:description] %>
                                       </span></td>
@@ -194,12 +195,12 @@
                                         <td style="border-collapse: collapse; font-size: 18px; line-height: 1; text-decoration: none !important;">&nbsp;</td>
                                       </tr>
                                     </table>
-                                    <div class="container wide" width="600" style="margin: 0 auto; text-align: left; width: 600px;">
+                                    <div class="container wide" width="600" style="margin: 0 auto; text-align: <%= @direction[:align] %>; width: 600px;">
                                       <table class="container__table" cellpadding="0" cellspacing="0" border="0" width="100%" style="border-collapse: collapse; margin: 0 auto; mso-table-lspace: 0pt; mso-table-rspace: 0pt; table-layout: fixed;">
 
                                         <tr>
-                                          <th class="col-2" style="font-weight: normal; mso-line-height-rule: exactly; padding: 0;" width="300px" valign="top" align="left">
-                                            <div class="media-info" style="padding: 0px 30px; text-align: left;">
+                                          <th class="col-2" style="font-weight: normal; mso-line-height-rule: exactly; padding: 0;" width="300px" valign="top" align="<%= @direction[:align] %>">
+                                            <div class="media-info" style="padding: 0px 30px; text-align: <%= @direction[:align] %>;">
                                               <div>
                                                 <span class="span text-bold" style="font-size: 15px; font-weight: bold !important; line-height: 25px;">
                                                   <%= I18n.t("mails_notifications.task_resolved.status") %>
@@ -225,8 +226,8 @@
                                               </div>
                                             </div>
                                           </th>
-                                          <th class="col-2" style="font-weight: normal; mso-line-height-rule: exactly; padding: 0;" width="300px" valign="top" align="left">
-                                            <div class="media-info" style="padding: 0px 30px; text-align: left;">
+                                          <th class="col-2" style="font-weight: normal; mso-line-height-rule: exactly; padding: 0;" width="300px" valign="top" align="<%= @direction[:align] %>">
+                                            <div class="media-info" style="padding: 0px 30px; text-align: <%= @direction[:align] %>;">
                                               <div>
                                                 <span class="span text-bold" style="font-size: 15px; font-weight: bold !important; line-height: 15px;">
                                                   <%= I18n.t("activerecord.models.project") %>
@@ -252,11 +253,11 @@
                                         <td style="border-collapse: collapse; font-size: 15px; line-height: 1; text-decoration: none !important;">&nbsp;</td>
                                       </tr>
                                     </table>
-                                    <div class="container wide" width="600" style="margin: 0 auto; text-align: left; width: 600px;">
+                                    <div class="container wide" width="600" style="margin: 0 auto; text-align: <%= @direction[:align] %>; width: 600px;">
                                       <table class="container__table" cellpadding="0" cellspacing="0" border="0" width="100%" style="border-collapse: collapse; margin: 0 auto; mso-table-lspace: 0pt; mso-table-rspace: 0pt; table-layout: fixed;">
                                         <tr>
-                                          <th class="col-2" style="font-weight: normal; mso-line-height-rule: exactly; padding: 0;" width="300px" valign="top" align="left">
-                                            <div class="media-info" style="padding: 0px 30px; text-align: left;">
+                                          <th class="col-2" style="font-weight: normal; mso-line-height-rule: exactly; padding: 0;" width="300px" valign="top" align="<%= @direction[:align] %>">
+                                            <div class="media-info" style="padding: 0px 30px; text-align: <%= @direction[:align] %>;">
                                               <div>
                                                 <span class="span text-bold" style="font-size: 15px; font-weight: bold !important; line-height: 15px;">
                                                   <%= I18n.t("slack.fields.attribution") %>
@@ -282,8 +283,8 @@
                                               </div>
                                             </div>
                                           </th>
-                                          <th class="col-2" style="font-weight: normal; mso-line-height-rule: exactly; padding: 0;" width="300px" valign="top" align="left">
-                                            <div class="media-info" style="padding: 0px 30px; text-align: left;">
+                                          <th class="col-2" style="font-weight: normal; mso-line-height-rule: exactly; padding: 0;" width="300px" valign="top" align="<%= @direction[:align] %>">
+                                            <div class="media-info" style="padding: 0px 30px; text-align: <%= @direction[:align] %>;">
                                               <div><span class="span text-bold" style="font-size: 15px; font-weight: bold !important; line-height: 15px;"></span>
                                                 <table cellpadding="0" cellspacing="0" border="0" width="100%" style="border-collapse: collapse; mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
                                                   <tr>
@@ -303,11 +304,11 @@
                                         <td style="border-collapse: collapse; font-size: 15px; line-height: 1; text-decoration: none !important;">&nbsp;</td>
                                       </tr>
                                     </table>
-                                    <div class="container wide" width="600" style="margin: 0 auto; text-align: left; width: 600px;">
+                                    <div class="container wide" width="600" style="margin: 0 auto; text-align: <%= @direction[:align] %>; width: 600px;">
                                       <table class="container__table" cellpadding="0" cellspacing="0" border="0" width="100%" style="border-collapse: collapse; margin: 0 auto; mso-table-lspace: 0pt; mso-table-rspace: 0pt; table-layout: fixed;">
                                         <tr>
-                                          <th class="col-2" style="font-weight: normal; mso-line-height-rule: exactly; padding: 0;" width="600px" valign="top" align="left">
-                                            <div class="media-info" style="padding: 0px 30px; text-align: left;">
+                                          <th class="col-2" style="font-weight: normal; mso-line-height-rule: exactly; padding: 0;" width="600px" valign="top" align="<%= @direction[:align] %>">
+                                            <div class="media-info" style="padding: 0px 30px; text-align: <%= @direction[:align] %>;">
                                               <div>
                                                 <span class="span text-bold" style="font-size: 15px; font-weight: bold !important; line-height: 15px;">
                                                   <%= I18n.t("mails_notifications.task_resolved.media_h") %>
@@ -376,13 +377,13 @@
                       }
                     </style>
 
-                    <div class="container wide" width="100%" style="margin: 0 auto; text-align: left;">
+                    <div class="container wide" width="100%" style="margin: 0 auto; text-align: <%= @direction[:align] %>;">
                       <table class="container__table" cellpadding="0" cellspacing="0" border="0" width="100%" style="border-collapse: collapse; margin: 0 auto; mso-table-lspace: 0pt; mso-table-rspace: 0pt; table-layout: fixed;">
                         <tr>
-                          <th class="col-1" style="font-weight: normal; mso-line-height-rule: exactly; padding: 0;" width="100%" valign="top" align="left">
+                          <th class="col-1" style="font-weight: normal; mso-line-height-rule: exactly; padding: 0;" width="100%" valign="top" align="<%= @direction[:align] %>">
                             <table cellpadding="0" cellspacing="0" border="0" width="auto" style="border-collapse: collapse; mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
                               <tr>
-                                <th class="footer" style="font-weight: normal; padding: 0;" align="left">
+                                <th class="footer" style="font-weight: normal; padding: 0;" align="<%= @direction[:align] %>">
                                   <p class="h4 text-gray" style="color: #9a9a9a !important; font-size: 15px; line-height: 20px; margin: 0;">
                                     <%= link_to(@info[:button], @info[:media_url], :class => 'link', :style => "color: #0d6cf7 !important; text-decoration: none;") %>
                                      • 
