--- a/app/views/team_user_mailer/request_to_join_processed.html.erb
+++ b/app/views/team_user_mailer/request_to_join_processed.html.erb
@@ -25,17 +25,17 @@
 
   <!--~~// Notify-title module start \\~~-->
   <!--————————————————————————————-->
-  <div class="notify-title" style="text-align: left !important;">
+  <div class="notify-title" style="text-align: left !important; direction: <%= @direction[:dir] %>">
     <table cellpadding="0" cellspacing="0" border="0" width="100%" style="border-collapse: collapse; mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
       <tr>
         <td style="border-collapse: collapse; font-size: 44px; line-height: 1; text-decoration: none !important;">&nbsp;</td>
       </tr>
     </table>
-    <div class="container " width="600" style="margin: 0 auto; text-align: left; width: 600px;">
+    <div class="container " width="600" style="margin: 0 auto; text-align: <%= @direction[:align] %>; width: 600px;">
       <table class="container__table" cellpadding="0" cellspacing="0" border="0" width="100%" style="border-collapse: collapse; margin: 0 auto; mso-table-lspace: 0pt; mso-table-rspace: 0pt; table-layout: fixed;">
                 <tr>
                   <th class="col-1" style="font-weight: normal; mso-line-height-rule: exactly; padding: 0;" width="600px" valign="top" align="left">
-                    <div class="notify-title__content">
+                    <div class="notify-title__content" style="text-align:<%= @direction[:align] %>;">
                       <div class="h3 notify-title__proj" style="font-size: 21px; letter-spacing: -0.2px; line-height: 29px;">
                         <%= @info[:greeting] %>
                       </div>
@@ -74,9 +74,7 @@
                     <!--————————————————————————————-->
                     <!--~~\\ Notify-title module end //~~-->
                   <% if @info[:request_status] == 'approved' %>
-
-                    <div class="container wide" width="600" style="margin: 0 auto; text-align: left; width: 600px;">
-
+                     <div class="container wide" width="600" style="margin: 0 auto; text-align: <%= @direction[:align] %>; width: 600px;">
                       <table cellpadding="0" cellspacing="0" border="0" width="100%" style="border-collapse: collapse; mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
                         <tr>
                           <td class="notify-title__button text-white" style="background: #2E77FC; border-collapse: collapse; border-radius: 4px; color: #f1f1f1 !important; display: inline-block; padding-bottom: 15px; padding-left: 25px; padding-right: 23px; padding-top: 15px;"
@@ -92,7 +90,8 @@
                                     %>
                                   </span>
                                 </td>
-                                <td style="border-collapse: collapse;" align="right"><img src="https://images.ctfassets.net/g118h5yoccvd/1ji47bOy90143djFnEPuj1/936ebe3388362a7861715a1b819b231b/arrow_3x.png" alt="arrow-icon" width="7" style="-ms-interpolation-mode: bicubic; border: 0 none; height: auto; line-height: 100%; outline: none; text-decoration: none;">
+                                <td style="border-collapse: collapse;" align="<%= @direction[:align] %>">
+                                  <%= image_tag("https://images.ctfassets.net/g118h5yoccvd/#{@direction[:arrow]}", width: "7", alt: "arrow-icon",  style: "-ms-interpolation-mode: bicubic; border: 0 none; height: auto; line-height: 100%; outline: none; text-decoration: none;") %>
                                 </td>
                               </tr>
                             </table>
