--- a/app/views/assignment_mailer/_media.html.erb
+++ b/app/views/assignment_mailer/_media.html.erb
@@ -94,7 +94,7 @@
                           </div>
                           <div class="text-gray" style="color: #9a9a9a !important;">
                             <span class="span" style="font-size: 15px; line-height: 15px;">
-                              <%= @info[:created_at] %>
+                              <%= I18n.l @info[:created_at], format: :email %>
                             </span>
                           </div>
                         </div>
@@ -122,7 +122,10 @@
                               </tr>
                             </table>
                           </div>
-                          <div class="text-gray" style="color: #9a9a9a !important;"><span class="span" style="font-size: 15px; line-height: 15px;"><%= @info[:updated_at] %></span>
+                          <div class="text-gray" style="color: #9a9a9a !important;">
+                            <span class="span" style="font-size: 15px; line-height: 15px;">
+                              <%= I18n.l @info[:updated_at], format: :email %>
+                            </span>
                             <table cellpadding="0" cellspacing="0" border="0" width="100%" style="border-collapse: collapse; mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
                               <tr class="rowgap" style="display: block;">
                                 <td style="border-collapse: collapse; font-size: 5px; line-height: 1;">&nbsp;</td>
