--- a/app/views/security_mailer/notify.html.erb
+++ b/app/views/security_mailer/notify.html.erb
@@ -106,7 +106,10 @@
                                                   </tr>
                                                 </table>
                                               </div>
-                                              <div class="text-gray" style="color: #9a9a9a !important;"><span class="span" style="font-size: 15px; line-height: 20px;"><%= @timestamp %></span>
+                                              <div class="text-gray" style="color: #9a9a9a !important;">
+                                                <span class="span" style="font-size: 15px; line-height: 20px;">
+                                                  <%= I18n.l @timestamp, format: :email %>
+                                                </span>
                                                 <table cellpadding="0" cellspacing="0" border="0" width="100%" style="border-collapse: collapse; mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
                                                   <tr class="rowgap" style="display: block;">
                                                     <td style="border-collapse: collapse; font-size: 5px; line-height: 1;">&nbsp;</td>
