--- a/app/views/task_mailer/notify.text.erb
+++ b/app/views/task_mailer/notify.text.erb
@@ -8,7 +8,7 @@
 
 <%= @info[:title] %>
 
-<%= "#{@info[:author]} (#{@info[:role]}) - #{@info[:created_at]}" %>
+<%= "#{@info[:author]} (#{@info[:role]}) - #{I18n.l @info[:created_at], format: :email}" %>
 > <%= @info[:response] %>
 
 <%= @info[:button] %>
