--- a/app/views/terminal_status_mailer/notify.html.erb
+++ b/app/views/terminal_status_mailer/notify.html.erb
@@ -76,7 +76,7 @@
                               <%= image_tag(@info[:profile_image], height: "20", width: "20", style: "font-size:14px; height:20px; width:20px; line-height:20px; border-radius:4px; vertical-align:top") %>
                               &nbsp;
                               <span class="span text text-gray" style="font-size: 14px; line-height: 18px; color: #757575 !important;">
-                                <%= "#{@info[:author]} (#{@info[:author_role]}) - #{@info[:updated_at]}" %>
+                                <%= "#{@info[:author]} (#{@info[:author_role]}) - #{I18n.l @info[:updated_at], format: :email}" %>
                               </span>
                             </div>
                           </td>
@@ -255,7 +255,7 @@
                                               </div>
                                               <div class="text-gray" style="color: #9a9a9a !important;">
                                                 <span class="span" style="font-size: 15px; line-height: 15px;">
-                                                  <%= @info[:created_at] %>
+                                                  <%= I18n.l @info[:created_at], format: :email %>
                                                 </span>
                                               </div>
                                             </div>
@@ -283,7 +283,10 @@
                                                   </tr>
                                                 </table>
                                               </div>
-                                              <div class="text-gray" style="color: #9a9a9a !important;"><span class="span" style="font-size: 15px; line-height: 15px;"><%= @info[:updated_at] %></span>
+                                              <div class="text-gray" style="color: #9a9a9a !important;">
+                                                <span class="span" style="font-size: 15px; line-height: 15px;">
+                                                  <%= I18n.l @info[:updated_at], format: :email %>
+                                                </span>
                                                 <table cellpadding="0" cellspacing="0" border="0" width="100%" style="border-collapse: collapse; mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
                                                   <tr class="rowgap" style="display: block;">
                                                     <td style="border-collapse: collapse; font-size: 5px; line-height: 1;">&nbsp;</td>
