--- a/app/views/terminal_status_mailer/notify.text.erb
+++ b/app/views/terminal_status_mailer/notify.text.erb
@@ -8,7 +8,7 @@
 
 <%= @info[:title] %>
 
-<%= "#{@info[:author]} (#{@info[:author_role]}) - #{@info[:updated_at]}" %>
+<%= "#{@info[:author]} (#{@info[:author_role]}) - #{I18n.l @info[:updated_at], format: :email}" %>
 > <%= I18n.t('mails_notifications.media_status.section_title', status: @info[:status]) %>
 
 <%= I18n.t("slack.fields.view_button", {type: I18n.t("mails_notifications.media_status.label"), app: CONFIG['app_name']}) %>:
@@ -16,8 +16,8 @@
 
 <%= @info[:description] %>
 <%= I18n.t(:oembed_notes) %> (<%= @info[:notes] %>)
-<%= I18n.t("mails_notifications.media_status.added_to", app_name: CONFIG['app_name']) %> (<%= @info[:created_at] %>)
-<%= I18n.t("mails_notifications.media_status.update_h") %> (<%= @info[:updated_at] %>)
+<%= I18n.t("mails_notifications.media_status.added_to", app_name: CONFIG['app_name']) %> (<%= I18n.l @info[:created_at], format: :email %>)
+<%= I18n.t("mails_notifications.media_status.update_h") %> (<%= I18n.l @info[:updated_at], format: :email %>)
 <%= I18n.t("activerecord.models.project") %> (<%= @info[:project] %>)
 <%= I18n.t("mails_notifications.media_status.tasks_h") %> (<%= "#{@info[:resolved_tasks]}/#{@info[:total_tasks]}" %>)
 ...
