--- a/app/views/assignment_mailer/_media.html.erb
+++ b/app/views/assignment_mailer/_media.html.erb
@@ -1,13 +1,13 @@
-<div class="container wide" width="600" style="margin: 0 auto; text-align: left; width: 600px;">
-  <table class="container__table" cellpadding="0" cellspacing="0" border="0" width="100%" style="border-left: 8px solid #5CAE73; border-collapse: collapse; margin: 0 auto; mso-table-lspace: 0pt; mso-table-rspace: 0pt; table-layout: fixed;">
+<div class="container wide" width="600" style="margin: 0 auto; text-align: <%= @direction[:align] %>; width: 600px;">
+  <table class="container__table" cellpadding="0" cellspacing="0" border="0" width="100%" style="border-<%= @direction[:align] %>: 8px solid #5CAE73; border-collapse: collapse; margin: 0 auto; mso-table-lspace: 0pt; mso-table-rspace: 0pt; table-layout: fixed;">
     <tr>
-      <th class="col-1" style="font-weight: normal; mso-line-height-rule: exactly; padding: 0;" width="600px" valign="top" align="left">
+      <th class="col-1" style="font-weight: normal; mso-line-height-rule: exactly; padding: 0;" width="600px" valign="top" align="<%= @direction[:align] %>">
         <div class="section" style="background-color: #fff; text-align: !important;">
           <!-- Section title-->
           <table cellpadding="0" cellspacing="0" border="0" width="100%" style="border-collapse: collapse; mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
             <% if !@info[:description].blank? %>
               <tr>
-                <td class="section__title" style="padding: 23px 30px;" bgcolor="#fff" align="left">
+                <td class="section__title" style="padding: 23px 30px;" bgcolor="#fff" align="<%= @direction[:align] %>">
                   <span class="span text" style="font-size: 17px; line-height: 20px;">
                     <%= @info[:description] %>
                   </span></td>
@@ -22,7 +22,7 @@
             <% end %>
             <% if !@info[:media_link].blank? %> 
               <tr>
-                <td class="section__description" style="padding: 23px 30px;" bgcolor="#fff" align="left">
+                <td class="section__description" style="padding: 23px 30px;" bgcolor="#fff" align="<%= @direction[:align] %>">
                   <%= 
                     link_to(@info[:media_link], @info[:media_link], :class => 'span text text-gray', :style => 'font-size: 14px; line-height: 18px; color: #757575 !important; text-decoration:none;') 
                   %>
@@ -49,12 +49,12 @@
                     <td style="border-collapse: collapse; font-size: 33px; line-height: 1; text-decoration: none !important;">&nbsp;</td>
                   </tr>
                 </table>
-                <div class="container wide" width="600" style="margin: 0 auto; text-align: left; width: 600px;">
+                <div class="container wide" width="600" style="margin: 0 auto; text-align: <%= @direction[:align] %>; width: 600px;">
                   <table class="container__table" cellpadding="0" cellspacing="0" border="0" width="100%" style="border-collapse: collapse; margin: 0 auto; mso-table-lspace: 0pt; mso-table-rspace: 0pt; table-layout: fixed;">
 
                     <tr>
-                      <th class="col-2" style="font-weight: normal; mso-line-height-rule: exactly; padding: 0;" width="300px" valign="top" align="left">
-                        <div class="media-info" style="padding-left: 30px; padding-right: 30px; text-align: left;">
+                      <th class="col-2" style="font-weight: normal; mso-line-height-rule: exactly; padding: 0;" width="300px" valign="top" align="<%= @direction[:align] %>">
+                        <div class="media-info" style="padding-left: 30px; padding-right: 30px; text-align: <%= @direction[:align] %>;">
                           <div>
                             <span class="span text-bold" style="font-size: 15px; font-weight: bold !important; line-height: 25px;">
                               <%= I18n.t("mails_notifications.assignment.#{@info[:event_type]}_by") %>
@@ -80,8 +80,8 @@
                           </div>
                         </div>
                       </th>
-                      <th class="col-2" style="font-weight: normal; mso-line-height-rule: exactly; padding: 0;" width="300px" valign="top" align="left">
-                        <div class="media-info" style="padding-left: 30px; padding-right: 30px; text-align: left;">
+                      <th class="col-2" style="font-weight: normal; mso-line-height-rule: exactly; padding: 0;" width="300px" valign="top" align="<%= @direction[:align] %>">
+                        <div class="media-info" style="padding-left: 30px; padding-right: 30px; text-align: <%= @direction[:align] %>;">
                           <div>
                             <span class="span text-bold" style="font-size: 15px; font-weight: bold !important; line-height: 15px;">
                               <%= I18n.t("mails_notifications.media_status.added_to", app_name: CONFIG['app_name']) %>
@@ -94,7 +94,7 @@
                           </div>
                           <div class="text-gray" style="color: #9a9a9a !important;">
                             <span class="span" style="font-size: 15px; line-height: 15px;">
-                              <%= @info[:created_at] %>
+                              <%= I18n.l @info[:created_at], format: :email %>
                             </span>
                           </div>
                         </div>
@@ -107,11 +107,11 @@
                     <td style="border-collapse: collapse; font-size: 15px; line-height: 1; text-decoration: none !important;">&nbsp;</td>
                   </tr>
                 </table>
-                <div class="container wide" width="600" style="margin: 0 auto; text-align: left; width: 600px;">
+                <div class="container wide" width="600" style="margin: 0 auto; text-align: <%= @direction[:align] %>; width: 600px;">
                   <table class="container__table" cellpadding="0" cellspacing="0" border="0" width="100%" style="border-collapse: collapse; margin: 0 auto; mso-table-lspace: 0pt; mso-table-rspace: 0pt; table-layout: fixed;">
                     <tr>
-                      <th class="col-2" style="font-weight: normal; mso-line-height-rule: exactly; padding: 0;" width="300px" valign="top" align="left">
-                        <div class="media-info" style="padding-left: 30px; padding-right: 30px; text-align: left;">
+                      <th class="col-2" style="font-weight: normal; mso-line-height-rule: exactly; padding: 0;" width="300px" valign="top" align="<%= @direction[:align] %>">
+                        <div class="media-info" style="padding-left: 30px; padding-right: 30px; text-align: <%= @direction[:align] %>;">
                           <div>
                             <span class="span text-bold" style="font-size: 15px; font-weight: bold !important; line-height: 15px;">
                               <%= I18n.t("mails_notifications.media_status.update_h") %>
@@ -122,7 +122,10 @@
                               </tr>
                             </table>
                           </div>
-                          <div class="text-gray" style="color: #9a9a9a !important;"><span class="span" style="font-size: 15px; line-height: 15px;"><%= @info[:updated_at] %></span>
+                          <div class="text-gray" style="color: #9a9a9a !important;">
+                            <span class="span" style="font-size: 15px; line-height: 15px;">
+                              <%= I18n.l @info[:updated_at], format: :email %>
+                            </span>
                             <table cellpadding="0" cellspacing="0" border="0" width="100%" style="border-collapse: collapse; mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
                               <tr class="rowgap" style="display: block;">
                                 <td style="border-collapse: collapse; font-size: 5px; line-height: 1;">&nbsp;</td>
@@ -134,8 +137,8 @@
                           </div>
                         </div>
                       </th>
-                      <th class="col-2" style="font-weight: normal; mso-line-height-rule: exactly; padding: 0;" width="300px" valign="top" align="left">
-                        <div class="media-info" style="padding-left: 30px; padding-right: 30px; text-align: left;">
+                      <th class="col-2" style="font-weight: normal; mso-line-height-rule: exactly; padding: 0;" width="300px" valign="top" align="<%= @direction[:align] %>">
+                        <div class="media-info" style="padding-left: 30px; padding-right: 30px; text-align: <%= @direction[:align] %>;">
                           <div>
                             <span class="span text-bold" style="font-size: 15px; font-weight: bold !important; line-height: 15px;">
                               <%= I18n.t("activerecord.models.project") %>
@@ -161,11 +164,11 @@
                     <td style="border-collapse: collapse; font-size: 15px; line-height: 1; text-decoration: none !important;">&nbsp;</td>
                   </tr>
                 </table>
-                <div class="container wide" width="600" style="margin: 0 auto; text-align: left; width: 600px;">
+                <div class="container wide" width="600" style="margin: 0 auto; text-align: <%= @direction[:align] %>; width: 600px;">
                   <table class="container__table" cellpadding="0" cellspacing="0" border="0" width="100%" style="border-collapse: collapse; margin: 0 auto; mso-table-lspace: 0pt; mso-table-rspace: 0pt; table-layout: fixed;">
                     <tr>
-                      <th class="col-2" style="font-weight: normal; mso-line-height-rule: exactly; padding: 0;" width="600px" valign="top" align="left">
-                        <div class="media-info" style="padding-left: 30px; padding-right: 30px; text-align: left;">
+                      <th class="col-2" style="font-weight: normal; mso-line-height-rule: exactly; padding: 0;" width="600px" valign="top" align="<%= @direction[:align] %>">
+                        <div class="media-info" style="padding-left: 30px; padding-right: 30px; text-align: <%= @direction[:align] %>;">
                           <div>
                             <span class="span text-bold" style="font-size: 15px; font-weight: bold !important; line-height: 15px;">
                               <%= I18n.t("mails_notifications.media_status.tasks_h") %>
@@ -234,13 +237,13 @@
   }
 </style>
 
-<div class="container wide" width="100%" style="margin: 0 auto; text-align: left;">
+<div class="container wide" width="100%" style="margin: 0 auto; text-align: <%= @direction[:align] %>;">
   <table class="container__table" cellpadding="0" cellspacing="0" border="0" width="100%" style="border-collapse: collapse; margin: 0 auto; mso-table-lspace: 0pt; mso-table-rspace: 0pt; table-layout: fixed;">
     <tr>
-      <th class="col-1" style="font-weight: normal; mso-line-height-rule: exactly; padding: 0;" width="100%" valign="top" align="left">
+      <th class="col-1" style="font-weight: normal; mso-line-height-rule: exactly; padding: 0;" width="100%" valign="top" align="<%= @direction[:align] %>">
         <table cellpadding="0" cellspacing="0" border="0" width="auto" style="border-collapse: collapse; mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
           <tr>
-            <th class="footer" style="font-weight: normal; padding: 0;" align="left">
+            <th class="footer" style="font-weight: normal; padding: 0;" align="<%= @direction[:align] %>">
               <p class="h4 text-gray" style="color: #9a9a9a !important; font-size: 15px; line-height: 20px; margin: 0;">
                 <%= link_to(@info[:button], @info[:url], :class => 'link', :style => "color: #0d6cf7 !important; text-decoration: none;") %>
                  •                 
