--- a/app/views/assignment_mailer/notify.html.erb
+++ b/app/views/assignment_mailer/notify.html.erb
@@ -25,17 +25,17 @@
 
 <!--~~// Notify-title module start \\~~-->
 <!--————————————————————————————-->
-  <div class="notify-title" style="text-align: left !important;">
+  <div class="notify-title" style="text-align: left !important; direction: <%= @direction[:dir] %>">
             <table cellpadding="0" cellspacing="0" border="0" width="100%" style="border-collapse: collapse; mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
               <tr>
                 <td style="border-collapse: collapse; font-size: 44px; line-height: 1; text-decoration: none !important;">&nbsp;</td>
               </tr>
             </table>
-            <div class="container " width="600" style="margin: 0 auto; text-align: left; width: 600px;">
+            <div class="container " width="600" style="margin: 0 auto; text-align: <%= @direction[:align] %>; width: 600px;">
               <table class="container__table" cellpadding="0" cellspacing="0" border="0" width="100%" style="border-collapse: collapse; margin: 0 auto; mso-table-lspace: 0pt; mso-table-rspace: 0pt; table-layout: fixed;">
                 <tr>
-                  <th class="col-1" style="font-weight: normal; mso-line-height-rule: exactly; padding: 0;" width="600px" valign="top" align="left">
-                    <div class="notify-title__content">
+                  <th class="col-1" style="font-weight: normal; mso-line-height-rule: exactly; padding: 0;" width="600px" valign="top" align="<%= @direction[:align] %>">
+                    <div class="notify-title__content" style="text-align:<%= @direction[:align] %>;">
                       <div class="h3 notify-title__proj" style="font-size: 21px; letter-spacing: -0.2px; line-height: 29px;">
                         <%= @info[:greeting] %>
                       </div>
@@ -99,24 +99,24 @@
 
                     <!--~~// Section module start \\~~-->
                     <!--————————————————————————————-->
-                    <div class="container wide" width="600" style="margin: 0 auto; text-align: left; width: 600px;">
+                    <div class="container wide" width="600" style="margin: 0 auto; text-align: <%= @direction[:align] %>; width: 600px;">
                       <table class="container__table" cellpadding="0" cellspacing="0" border="0" width="100%" style="border-collapse: collapse; margin: 0 auto; mso-table-lspace: 0pt; mso-table-rspace: 0pt; table-layout: fixed;">
                         <tr>
-                           <td class="section__title" style="padding: 5px 0px;" align="left">
+                           <td class="section__title" style="padding: 5px 0px;" align="<%= @direction[:align] %>">
                             <%= link_to(@info[:title], @info[:url], :class => 'h3 link', :style => "font-size: 21px; letter-spacing: -0.2px; line-height: 29px; font-weight: bold !important; color: #0d6cf7 !important; text-decoration: none;") %>
                           </td>
                         </tr>
                         <tr style="text-align:left;vertical-align:baseline">
-                          <td class="section__title" style="padding: 23px 0px 14px 0px;" align="left">
+                          <td class="section__title" style="padding: 23px 0px 14px 0px;" align="<%= @direction[:align] %>">
                             <%= image_tag(@info[:profile_image], height: "20", width: "20", style: "font-size:14px; height:20px; width:20px; line-height:20px; border-radius:4px; vertical-align:top") %>
                             &nbsp;
                             <span class="span text text-gray" style="font-size: 14px; line-height: 18px; color: #757575 !important;">
-                              <%= "#{@info[:author]} (#{@info[:role]}) - #{@info[:created_at]}" %>
+                              <%= "#{@info[:author]} (#{@info[:role]}) - #{I18n.l @info[:created_at], format: :email}" %>
                             </span>
                           </td>
                         </tr>
                         <tr>
-                          <td class="section__title" style="padding: 23px 30px;" bgcolor="#fff" align="left">
+                          <td class="section__title" style="padding: 23px 30px;" bgcolor="#fff" align="<%= @direction[:align] %>">
                             <%= I18n.t("mails_notifications.assignment.#{@info[:event_type]}_log",
                               model: I18n.t("activerecord.models.#{@info[:model]}"),
                               username: @info[:username],
@@ -148,7 +148,8 @@
                                     <%= link_to(@info[:button], @info[:url], :class => 'link', :style => "color: #fff !important; text-decoration: none;") %>
                                   </span>
                                 </td>
-                                <td style="border-collapse: collapse;" align="right"><img src="https://images.ctfassets.net/g118h5yoccvd/1ji47bOy90143djFnEPuj1/936ebe3388362a7861715a1b819b231b/arrow_3x.png" alt="arrow-icon" width="7" style="-ms-interpolation-mode: bicubic; border: 0 none; height: auto; line-height: 100%; outline: none; text-decoration: none;">
+                                <td style="border-collapse: collapse;" align="right">
+                                  <%= image_tag("https://images.ctfassets.net/g118h5yoccvd/#{@direction[:arrow]}", width: "7", alt: "arrow-icon",  style: "-ms-interpolation-mode: bicubic; border: 0 none; height: auto; line-height: 100%; outline: none; text-decoration: none;") %>
                                 </td>
                               </tr>
                             </table>
