Ticket #7653 - handle newline in email notification

--- a/app/views/task_mailer/notify.html.erb
+++ b/app/views/task_mailer/notify.html.erb
@@ -119,7 +119,7 @@
                         </tr>
                         <tr>
                           <td class="section__title" style="padding: 23px 30px;" bgcolor="#fff" align="<%= @direction[:align] %>">
-                            <%= @info[:response] %>
+                            <%= @info[:response].html_safe %>
                           </td>
                         </tr>
                       </table>
